--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
           </h1>
           <p class="text-lg text-left px-[20%] z-10 font-mali">
             Du uppfyller förkunskapskraven för vår utbildning och har tagit dig
-            vidare i ansökningsprocessen. Välkommen till urvalsprov för YRGO
-            Game Creator Programmer! På den här webbplatsen hittar du mer
-            information om hur hela processen kommer gå till.
+            vidare i ansökningsprocessen. Välkommen till det nya urvalsprovet
+            för YRGO Game Creator Programmer! Vår ambition har varit att skapa
+            ett urvalsprov som är en minnesvärd upplevelse som börjar när den
+            ansökande kliver in på skolan, och som hen bär med sig resten av
+            sitt liv. På den här webbplatsen hittar du mer information om hur
+            hela processen kommer gå till.
           </p>
         </div>
       </section>
@@ -90,9 +93,10 @@
           <p class="text-lg text-left px-[15%] z-10 font-mali">
             Därför ber vi dig svara på några frågor. Du kan i lugn och ro svara
             på våra frågor med hjälp av din mobil eller dator med webbkamera via
-            ansökningsplattformen. Vi kommer bland annat be dig berätta om dig
-            själv, hur du jobbar i grupp och dina favoritspel. Du spelar själv
-            in svaren i små videoklipp, varje klipp får vara max 2 minuter.
+            ansökningsplattformen. Du är mer än den kunskap du besitter, därför
+            får du bland annat berätta om dig själv, hur du jobbar i grupp och
+            dina favoritspel. Du spelar själv in svaren i små videoklipp, varje
+            klipp får vara max 2 minuter.
           </p>
         </div>
       </section>
@@ -112,13 +116,13 @@
             Dags för urvalsprov
           </h1>
           <p class="text-lg text-left px-28 z-10 font-mali">
-            Det kan kännas nervöst, vi vet - men det kommer bli kul! Våra elever
-            kommer att finnas på plats på skolan för att möta dig, besvara
-            frågor innan provet och hålla i aktiviteter, så du har möjlighet att
-            lära känna andra sökande innan provet. Föredrar du att sitta, stå,
-            eller halvligga när du gör ditt prov? I provsalen kan du känna sig
-            bekväm och välja sittplats själv. Vi erbjuder bord i olika höjder,
-            stolar, fåtöljer och saccosäckar.
+            Provet kommer ske på plats. Det kan kännas nervöst, vi vet - men det
+            kommer bli kul! Våra elever kommer att finnas på plats på skolan för
+            att möta dig, besvara frågor innan provet och du får möjlighet att
+            spela spel av tidigare elever. Föredrar du att sitta, stå, eller
+            halvligga när du gör ditt prov? I den mysiga provsalen kan du känna
+            dig bekväm och välja sittplats själv. Vi erbjuder bord i olika
+            höjder, stolar, fåtöljer och saccosäckar.
           </p>
         </div>
         <img src="/blobs/blob_3.svg" class="h-2/5 w-1/6" alt="blob" />
@@ -140,20 +144,11 @@
           <h1 class="text-center z-10 relative text-3xl font-bowlby">Provet</h1>
           <p class="text-lg text-left z-10 font-mali">
             Själva urvalsprovet består av olika delar för att vi ska få en så
-            bred bild av dina kunskaper som möjligt. Vid behov finns möjlighet
-            att göra provet muntligt eller i en enskild lokal. Kontakta oss för
-            mer information.
-            <br />
-            <br />
-            Öppna frågor - du får reflektera och svara på frågor med egna ord.
-            <br />
-            <br />
-            Frågor om AI - AI är en del av branschens framtid och vi vill gärna
-            se att du kan skriva effektiva prompts.
-            <br />
-            <br />
-            Kod utan kod - vi vill se att du kan beskriva korrekta processer med
-            egna ord.
+            bred bild av dina kunskaper och färdigheter som möjligt. Vid behov
+            finns möjlighet att göra provet muntligt eller i en enskild lokal.
+            Kontakta oss för mer information. Du kan förvänta dig en variation
+            av frågor och uppgifter, bland annat: Öppna frågor, Frågor om AI Kod
+            utan kod. Se exempel nedan.
           </p>
         </div>
       </section>
@@ -258,9 +253,9 @@
           </h1>
           <p class="text-lg text-left px-28 z-10 font-mali">
             Vill du fika, diskutera svar eller snacka spel? Du är varmt
-            välkommen att träffa våra elever på lite häng. Det är ett suveränt
-            tillfälle att networka med framtida branschkollegor! Ryktet säger
-            att urvalsprovs-ölen på kvällen är tradition.
+            välkommen att stanna efter provet. Det är ett suveränt tillfälle att
+            nörda och networka med framtida branschkollegor! Ryktet säger att
+            urvalsprovs-ölen på kvällen är tradition.
           </p>
         </div>
         <img
@@ -283,13 +278,14 @@
             <h2 class="text-center relative text-3xl font-bowlby">
               För lärare
             </h2>
-            <h3 class="font-bold">
+            <h3 class="">
               På vilket sätt är då detta en kostnadseffektiv lösning?
             </h3>
+
+            <h3 class="font-bold">Automatiserad intervjuprocess</h3>
             <p class="">
-              Automatiserad intervjuprocess - tack vare att den sökande själv
-              spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
-              hålla intervjuer
+              Tack vare att den sökande själv spelar in svar på intervjufrågorna
+              behöver mindre tid ägnas åt att hålla intervjuer.
             </p>
             <h3 class="font-bold">Mångfacetterat urvalsprov</h3>
             <p class="">
@@ -312,10 +308,10 @@
             </p>
             <h3 class="font-bold">Tillgänglighet</h3>
             <p class="">
-              Det är självklart att ansökningsprocessen ska vara tillgänglig för
-              alla. Därför uppfyller ansökningsplattformen WCAG-riktlinjerna,
-              och ansökande har alltid möjlighet att be om anpassningar, så som
-              muntliga prov, mer tid eller egen provsal.
+              Det är en självklarhet att ansökningsprocessen ska vara
+              tillgänglig för alla. Därför uppfyller ansökningsplattformen
+              WCAG-riktlinjerna, och ansökande har alltid möjlighet att be om
+              anpassningar, så som muntliga prov, mer tid eller egen provsal.
             </p>
           </div>
         </div>
