--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -35,7 +35,7 @@
         <a id="sectionTwoAnchor" href="#section-two">Intervju</a>
         <a id="sectionThreeAnchor" href="#section-three">Plats</a>
         <a id="sectionFourAnchor" href="#section-four">Provet</a>
-        <a id="sectionFiveAnchor" href="#section-five">Demo</a>
+        <a id="sectionFiveAnchor" href="#section-five">Prov Exempel</a>
         <a id="sectionSixAnchor" href="#section-six">Efter provet</a>
         <a id="sectionSevenAnchor" href="#section-seven">För lärare</a>
         <a id="sectionEightAnchor" href="#section-eight">Om oss</a>
