--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             bred bild av dina kunskaper och färdigheter som möjligt. Vid behov
             finns möjlighet att göra provet muntligt eller i en enskild lokal.
             Kontakta oss för mer information. Du kan förvänta dig en variation
-            av frågor och uppgifter, bland annat: Öppna frågor, Frågor om AI Kod
-            utan kod. Se exempel nedan.
+            av frågor och uppgifter, bland annat: Öppna frågor, Frågor om AI,
+            Kod utan kod. Se exempel nedan.
           </p>
         </div>
       </section>
