--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
           <video
             controls
             autoplay
+            muted
             src="./public/videos/Snake.mp4"
             class="h-32"
           ></video>
