--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="z-50 flex flex-col left-0 bg-slate-600 w-34 h-full fixed bg-opacity-0 justify-end gap-1.5 pl-3 pb-3 font-gloria"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-34 fixed bg-opacity-0 justify-end gap-1.5 pl-3 pb-3 font-gloria fixed left-0 bottom-3"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
           >Grattis!
