--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             autoplay
             muted
             src="./public/videos/Snake.mp4"
-            class="h-32"
+            class="h-32 z-10"
           ></video>
           <div class="flex flex-row justify-between mt-6">
             <img
