--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
       >
         <div class="flex flex-col justify-center h-full w-full relative">
           <img
-            src="/textblob/textblob_6.svg"
+            src="/textblob/textblob_teacher.svg"
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <div class="z-10 pl-[16%] pr-[20%] text-lg font-mali">
+          <div class="z-10 pl-[16%] pr-[18%] text-lg font-mali">
             <h2 class="text-center relative text-3xl font-bowlby">
               För lärare
             </h2>
