adjusted script for fullscreen pics.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -180,7 +180,7 @@
               alt=""
             />
             <img
-              class="h-28 z-10 rounded-md cursor-pointer pop-im border-2 border-black"
+              class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
               src="/public/images/Ex2.png"
               alt=""
             />
