fixes with blobs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h1 class="text-center z-10 relative text-5xl font-bowlby">
             Grattis!
           </h1>
-          <p class="text-lg text-left px-[20%] z-10 font-mali">
+          <p class="text-lg text-left px-[18%] z-10 font-mali">
             Du uppfyller förkunskapskraven för vår utbildning och har tagit dig
             vidare i ansökningsprocessen. Välkommen till det nya urvalsprovet
             för YRGO Game Creator Programmer! Vår ambition har varit att skapa
@@ -269,13 +269,13 @@
         id="section-seven"
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center text-left"
       >
-        <div class="flex flex-col justify-center h-full w-full relative">
+        <div class="flex flex-col justify-center h-[98%] w-[98%] relative">
           <img
             src="/textblob/textblob_teacher.svg"
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <div class="z-10 pl-[16%] pr-[18%] text-lg font-mali">
+          <div class="z-10 pl-[12%] pr-[10%] text-lg font-mali">
             <h2 class="text-center relative text-3xl font-bowlby">
               För lärare
             </h2>
