--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
           <div class="flex flex-row justify-between mt-6">
             <img
               class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
-              src="/public/images/Ex2.png"
-              alt=""
+              src="/public/images/spelOrg.png"
+              alt="Kod-exempel 1"
+            />
+            <img
+              class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
+              src="/public/images/spel2.png"
+              alt="Kod-exempel 2"
             />
             <img
               class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
               src="/public/images/Ex2.png"
-              alt=""
-            />
-            <img
-              class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
-              src="/public/images/Ex2.png"
-              alt=""
+              alt="Kod-exempel 3"
             />
           </div>
         </div>
@@ -205,7 +205,7 @@
           <img
             class="h-44 w-32 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
             src="/public/images/Ex2.png"
-            alt=""
+            alt="Bild på kod som du ska felsöka"
           />
         </div>
         <div
