--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -27,7 +27,7 @@
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="z-50 flex flex-col left-0 bg-slate-600 w-34 fixed bg-opacity-0 justify-end gap-1.5 pl-3 pb-3 font-gloria fixed left-0 bottom-3"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-34 fixed bg-opacity-0 justify-end gap-1.5 pl-3 pb-3 font-gloria bottom-3"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
           >Grattis!
@@ -185,7 +185,7 @@
               alt="Kod-exempel 2"
             />
             <img
-              class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
+              class="h-28 w-24 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
               src="/public/images/Ex2.png"
               alt="Kod-exempel 3"
             />
