--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
           ></video>
           <div class="flex flex-row justify-between mt-6">
             <img
-              class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
+              class="h-28 w-24 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
               src="/public/images/spelOrg.png"
               alt="Kod-exempel 1"
             />
             <img
-              class="h-28 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
+              class="h-28 w-24 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
               src="/public/images/spel2.png"
               alt="Kod-exempel 2"
             />
