letters with w and h

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             class="h-full w-full z-0 absolute"
             alt="blob"
           />
-          <h2 class="z-10 font-bold">Para ihop rätt kod exempel</h2>
+          <h2 class="z-10 font-bold">Para ihop rätt kod med spel</h2>
           <video
             controls
             autoplay
@@ -328,22 +328,22 @@
           class="flex flex-row justify-center items-center h-3/5 w-3/5 relative"
         >
           <div class="flex flex-col">
-            <img src="/letters/m.svg" class="" alt="letter M" />
+            <img src="/letters/m.svg" class="h-full w-full" alt="letter M" />
             <h2 class="font-gloria text-center">Mikaelah J</h2>
             <h2 class="font-gloria text-center">Game-Programmer</h2>
           </div>
           <div class="flex flex-col justify-center">
-            <img src="/letters/s.svg" class="" alt="letter S" />
+            <img src="/letters/s.svg" class="h-full w-full" alt="letter S" />
             <h2 class="font-gloria text-center">Simon L</h2>
             <h2 class="font-gloria text-center">Webbutvecklare</h2>
           </div>
           <div class="flex flex-col justify-center">
-            <img src="/letters/p.svg" class="" alt="letter P" />
+            <img src="/letters/p.svg" class="h-full w-full" alt="letter P" />
             <h2 class="font-gloria text-center">Petter J</h2>
             <h2 class="font-gloria text-center">Webbutvecklare</h2>
           </div>
           <div class="flex flex-col justify-center">
-            <img src="/letters/n.svg" class="" alt="letter N" />
+            <img src="/letters/n.svg" class="h-full w-full" alt="letter N" />
             <h2 class="font-gloria text-center">Nina W</h2>
             <h2 class="font-gloria text-center">UX-Designer</h2>
           </div>
