--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles.css" />
+    <meta name="description" content="site for YRGO project sammanslaget" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta
+      name="author"
+      content="Simon Lövbacka, Petter Jakobsson, Nina Winter, Mikaelah Jenkins"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Myndigheten För Skolplanerings-navigering</title>
     <link rel="icon" type="image/x-icon" href="/images/mspnFav.png" />
     <link
